--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui" : "rm -rf build && cd ../../Parte2/ejercicionumberphone && npm run build --prod && cp -r build ../../Parte3/EjercicioTelefonia/ ",
-    "deploy" : "git push heroku master",
-    "deploy:full" : "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod" : "heroku logs --tail"
+    "build:ui": "rm -rf build && cd ../../Parte2/ejercicionumberphone && npm run build --prod && cp -r build ../../Parte3/EjercicioTelefonia/ ",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Luis",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.6",
     "morgan": "^1.10.0",
     "morgan-body": "^2.6.6"
   },
