--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:ui": "rm -rf build && cd ../../Parte2/ejercicionumberphone && npm run build --prod && cp -r build ../../Parte3/EjercicioTelefonia/ ",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "slint:init" :"node_modules/.bin/eslint --init",
+    "slint": "node_modules/.bin/eslint index.js"
   },
   "author": "Luis",
   "license": "ISC",
@@ -24,6 +26,7 @@
     "morgan-body": "^2.6.6"
   },
   "devDependencies": {
+    "eslint": "^8.11.0",
     "nodemon": "^2.0.15"
   }
 }
